# nousergon-lib

./: .gitleaks-baseline.json  .pre-commit-config.yaml  CONTRIBUTING.md  NOTICE  OVERVIEW.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: auto-tag.yml  auto-version-bump.yml  changelog.yml  claude-md-guard.yml  config-counterpart-guard.yml  gate-label-guard.yml  gitleaks-scan.yml  gitleaks.yml  iam-drift-post-merge.yml  merge-group-required-check-guard.yml  notify-ci-failure.yml  pip-audit.yml  publish.yml  ruff.yml  test.yml  version-bump-check.yml
scripts/: autobump.py  validate_merge_group_required_checks.py
src/alpha_engine_lib/: __init__.py  alerts.py  anthropic_payload.py  arcticdb.py  artifact_freshness.py  cost.py  decision_capture.py  ec2_spot.py  http_retry.py  locks.py  logging.py  metrics.py  model_pricing.yaml  phase_registry.py  pillars.py  preflight.py  reconcile.py  ssm_dispatcher.py  ssm_log_capture.py  transparency_inventory.yaml
src/alpha_engine_lib/contracts/: predictions.schema.json
src/alpha_engine_lib/pipeline_status/: __init__.py  read.py  registry.py  templates.py
src/alpha_engine_lib/quant/: __init__.py  factor_risk.py  factor_risk_xs.py  returns.py  risk_measures.py  riskstats.py
src/alpha_engine_lib/quant/stats/: __init__.py  calibration.py  dsr.py  expectancy.py  information_coefficient.py  intervals.py  regime_sortino.py  risk_matched_benchmark.py
src/alpha_engine_lib/rag/: __init__.py  rerank.py  retrieval.py
src/nousergon_lib/: __init__.py  agent_schemas.py  alerts.py  anthropic_payload.py  arcticdb.py  artifact_freshness.py  artifact_resolution.py  collector_results.py  config.py  context.py  cost.py  dates.py  decision_capture.py  ec2_spot.py  email_sender.py  eval_artifacts.py  flow_doctor_fleet.py  gate_alerts.py  github_app.py  groom_eligibility.py  health.py  http_retry.py  locks.py  logging.py  metrics.py  phase_registry.py  pillars.py  preflight.py  reconcile.py  secrets.py  series_contract.py  sft.py  signals.py  spot_dispatch.py  ssm_dispatcher.py  ssm_log_capture.py  telegram.py  trading_calendar.py  transparency.py  transparency_inventory.yaml  (+2 more)
src/nousergon_lib/contracts/: __init__.py  __main__.py  apply_audit.schema.json  attractiveness_eval.schema.json  experiment.schema.json  experiment_record.schema.json  outcome_record.schema.json  report_card.schema.json  research_intel.schema.json  signals.schema.json
src/nousergon_lib/pipeline_status/: __init__.py  read.py  registry.py  templates.py
src/nousergon_lib/quant/: __init__.py  attractiveness.py  attribution.py  factor_risk.py  factor_risk_xs.py  horizon_guard.py  horizons.py  risk_measures.py  transaction_cost.py
src/nousergon_lib/quant/stats/: __init__.py  calibration.py  dsr.py  expectancy.py  information_coefficient.py  intervals.py  multiple_testing.py  pbo.py  regime_sortino.py  risk_matched_benchmark.py  trial_accumulator.py
src/nousergon_lib/rag/: __init__.py  batch_tier.py  db.py  embeddings.py  local_ann.py  parquet_mirror.py  rerank.py  retrieval.py  schema.sql
src/nousergon_lib/rag/migrations/: 0001_content_tsv.sql  0002_news_external_id.sql
src/nousergon_lib/sources/: __init__.py  protocols.py
tests/: conftest.py  test_agent_schemas.py  test_alerts.py  test_alpha_engine_lib_shim_removed.py  test_anthropic_payload.py  test_arcticdb.py  test_arcticdb_bitemporal.py  test_artifact_freshness.py  test_artifact_resolution.py  test_autobump.py  test_collector_results.py  test_compat_alias.py  test_config.py  test_context.py  test_contracts.py  test_cost.py  test_dates.py  test_decision_capture.py  test_ec2_spot.py  test_email_sender.py  test_eval_artifacts.py  test_flow_doctor_default_on.py  test_flow_doctor_fleet.py  test_gate_alerts.py  test_github_app.py  test_groom_eligibility.py  test_health.py  test_http_retry.py  test_krepis_reexport.py  test_locks.py  test_logging.py  test_metrics.py  test_phase_registry.py  test_pillars.py  test_pipeline_status_read.py  test_pipeline_status_registry.py  test_pipeline_status_templates.py  test_preflight.py  test_quant_attractiveness.py  test_quant_attribution.py  (+45 more)
