[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-engine-lib"
version = "0.40.0"
description = "Shared utilities for the Alpha Engine modules: preflight, logging, ArcticDB, dates, decision capture, cost telemetry, Anthropic payload chokepoint, artifact freshness, RAG, agent schemas, SSM secrets, Telegram + SNS alerts, EC2 spot resilience, SSM log-capture, SSM dispatcher, Step-Functions execution-state projection, and S3-conditional-PUT writer locks. Full surface documented in README."
readme = "README.md"
# EC2 still runs Python 3.9 on the always-on micro instance (boto3 drops
# 3.9 support 2026-04-29, so upgrade is on the near-term roadmap). All
# modules in this package use ``from __future__ import annotations``, so
# PEP 604 union syntax (``str | None``) is deferred and works on 3.9.
requires-python = ">=3.9"
authors = [{ name = "Brian McMahon" }]
license = { text = "Proprietary" }
dependencies = [
    "boto3>=1.34",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    # Pydantic V2 evaluates field annotations at class-construction time
    # via get_type_hints, which on Python 3.9 cannot eval PEP 604 union
    # syntax (``str | None``) even when guarded by
    # ``from __future__ import annotations``. eval_type_backport is the
    # backport Pydantic's own error message points to. 3.10+ has the
    # syntax natively, so the dep is conditional on 3.9.
    "eval_type_backport>=0.2.0; python_version < '3.10'",
]

[project.optional-dependencies]
arcticdb = ["arcticdb>=6.11", "pandas>=2.0"]
flow_doctor = ["flow-doctor[diagnosis,s3]>=0.4.0,<0.5.0"]
rag = [
    "psycopg2-binary>=2.9",
    "pgvector>=0.2",
    "numpy>=1.24",
]
# Cross-encoder rerank dependency. Pulls torch + transformers + the
# ~600MB BAAI bge-reranker-v2-m3 model on first use. Kept as a
# separate extra so vector/hybrid-only consumers don't pay the install
# cost.
rerank = [
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "moto>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"alpha_engine_lib" = ["transparency_inventory.yaml", "model_pricing.yaml"]
"alpha_engine_lib.rag" = ["schema.sql", "migrations/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
