[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nousergon-lib"
version = "0.124.15"
description = "Shared utilities for the Nous Ergon (Crucible) modules: preflight, logging, ArcticDB, dates, decision capture, cost telemetry, Anthropic payload chokepoint, artifact freshness, windowed artifact resolution, RAG, agent schemas, SSM secrets, Telegram + SNS alerts, EC2 spot resilience, SSM log-capture, SSM dispatcher, Step-Functions execution-state projection, S3-conditional-PUT writer locks, and bounded-backoff HTTP retry. Full surface documented in README."
readme = "README.md"
# EC2 still runs Python 3.9 on the always-on micro instance (boto3 drops
# 3.9 support 2026-04-29, so upgrade is on the near-term roadmap). All
# modules in this package use ``from __future__ import annotations``, so
# PEP 604 union syntax (``str | None``) is deferred and works on 3.9.
requires-python = ">=3.9"
authors = [{ name = "Brian McMahon" }]
license = { text = "AGPL-3.0-only" }
dependencies = [
    "boto3>=1.34",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    # The generic, edge-free primitives (logging, secrets, alerts, retry,
    # locks, cost telemetry, dates, AWS plumbing) were relocated to the MIT
    # ``krepis`` package in v0.66.0; ``nousergon_lib.<module>`` now
    # re-exports ``krepis.<module>`` for back-compat (see
    # tests/test_krepis_reexport.py). New code imports krepis directly.
    "krepis>=0.15.0",
    # Pydantic V2 evaluates field annotations at class-construction time
    # via get_type_hints, which on Python 3.9 cannot eval PEP 604 union
    # syntax (``str | None``) even when guarded by
    # ``from __future__ import annotations``. eval_type_backport is the
    # backport Pydantic's own error message points to. 3.10+ has the
    # syntax natively, so the dep is conditional on 3.9.
    "eval_type_backport>=0.2.0; python_version < '3.10'",
]

[project.optional-dependencies]
arcticdb = ["arcticdb>=6.11", "pandas>=2.0"]
# Quantitative portfolio analytics (nousergon_lib.quant). Only the
# factor-risk module needs numpy; the VaR/CVaR, riskstats, returns, and
# attribution modules are pure stdlib and import without this extra.
quant = ["numpy>=1.24"]
# Cross-sectional (Fama-MacBeth) factor risk model — quant.factor_risk_xs.
# Needs pandas (always) + scikit-learn (LedoitWolf/OAS shrinkage). Kept
# separate from [quant] so the numpy-only consumers (e.g. robodashboard)
# don't pull pandas+sklearn.
quant-xs = ["numpy>=1.24", "pandas>=2.0", "scikit-learn>=1.0"]
# Per-series L2 data-contract validation gates (nousergon_lib.series_contract
# — alpha-engine-config#2456): schema/sanity/staleness/continuity/outlier/
# calendar-monotonic checks over an OHLCV DataFrame. pandas-only (no numpy
# API used directly; pandas vendors it) — kept as its own extra rather than
# folded into [arcticdb] so a pure-validation consumer (predictor,
# backtester) doesn't have to pull the ArcticDB C++ extension transitively.
series-contract = ["pandas>=2.0"]
# Statistical evaluation utilities (nousergon_lib.quant.stats — PSR/DSR, IC,
# expectancy, BH-FDR, risk-matched benchmarks). numpy + pandas always; scipy is
# used by information_coefficient for the p-value (numpy fallback otherwise).
quant-stats = ["numpy>=1.24", "pandas>=2.0", "scipy>=1.7"]
# Pinned to the 0.6.0 soak (exact, explicit pre-release so pip installs it).
# Carries the notify_success / notify_on / auto-issue+fix-PR-toggle features,
# the init()->from_config removal (logging.py uses the from_config shim), and
# (rc5) the three-state fix-CLI outcome so a working-as-intended "no auto-fix"
# (e.g. an EXTERNAL provider outage) is a green notification, not a red failure.
# Bump to >=0.6.0,<0.7 when 0.6.0 final ships and the soak passes.
flow_doctor = ["krepis[flow_doctor]"]  # delegate the pin to krepis (owns the flow-doctor glue)
# GitHub App installation-token minting (nousergon_lib.github_app) — RS256
# App JWTs need PyJWT with its crypto backend (config-I2785).
github_app = ["PyJWT[crypto]>=2.8"]
contracts = ["jsonschema>=4.21"]
rag = [
    "psycopg2-binary>=2.9",
    "pgvector>=0.2",
    "numpy>=1.24",
]
# Cross-encoder rerank dependency. Pulls torch + transformers + the
# ~600MB BAAI bge-reranker-v2-m3 model on first use. Kept as a
# separate extra so vector/hybrid-only consumers don't pay the install
# cost.
rerank = [
    "sentence-transformers>=3.0",
]
# Parquet row-count completeness predicate (nousergon_lib.artifact_freshness
# .check_completeness, config#3086, CompletenessCheck.kind="parquet_row_count").
# Only the Parquet footer metadata is read (ParquetFile(...).metadata.num_rows
# — no column materialization), but that still needs pyarrow importable.
# Kept as its own extra so json_count_field/csv_row_count-only consumers of
# check_completeness don't pull it.
artifact-completeness-parquet = ["pyarrow>=14.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "moto>=5.0",
    "pyarrow>=14.0",
]
# Stub-only package for pyright's benefit — gives pipeline_status/read.py's
# `if TYPE_CHECKING: from mypy_boto3_stepfunctions.client import SFNClient`
# a resolvable type instead of an untyped boto3 BaseClient. Not a runtime
# dependency of anything; only needed in the pyright CI job's install step.
type-check = [
    "mypy-boto3-stepfunctions>=1.43",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nousergon_lib" = ["transparency_inventory.yaml", "py.typed"]
"nousergon_lib.contracts" = ["*.schema.json"]
"nousergon_lib.rag" = ["schema.sql", "migrations/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
# Ratchet floor (config#2530): measured 92.78% with the same [dev,rag,
# arcticdb,quant,quant-xs,quant-stats,contracts] extras test.yml's pytest job
# installs, rounded down to integer. Prevents regression; raise
# opportunistically as coverage grows.
fail_under = 92

[tool.pyright]
# CI gate (config#2534): basic mode pinned to the 3.9 floor — the oldest
# supported version is where PEP604-class regressions actually bite (see
# test.yml's origin note), so a single pinned run at 3.9 catches the same
# class of defect a full 3.9-3.13 pyright matrix would, without 5x the CI
# minutes. Strict mode is a deliberate follow-up ratchet, not this pass.
include = ["src/nousergon_lib"]
# tests/ excluded: this gate protects the *importable contract* ~10 repos
# consume (src/), not the test suite. Typing 1200+ test cases (many using
# loosely-typed fixtures/moto mocks/parametrize) is a separate, much larger
# ratchet with its own cost/benefit call — out of scope for this issue.
exclude = ["**/__pycache__"]
pythonVersion = "3.9"
typeCheckingMode = "basic"
# Resolve optional-extra imports (pandas/numpy/psycopg2/jsonschema/etc) the
# same way CI's pytest job does: installed into the active environment, not
# a separate venv config. The CI job installs
# ".[dev,rag,arcticdb,quant,quant-xs,quant-stats,contracts,type-check]"
# (mirrors test.yml's pytest install line + the pyright-only stub extra)
# before running pyright, so no venvPath/executionEnvironments indirection
# is needed — pyright resolves imports from the active interpreter's
# site-packages by default.

[tool.ruff]
line-length = 120
# py39, not the repo's newer CI matrix ceiling: `requires-python = ">=3.9"`
# above is the actual floor (EC2 always-on micro instance still runs 3.9;
# see that field's comment), and ruff's target-version controls which
# syntax UP-rules are allowed to assume is available. Targeting a newer
# version here would let UP-fixes rewrite code into syntax that breaks on
# the floor this package still has to run on.
target-version = "py39"

[tool.ruff.lint]
# Baseline mirrors the fleet's established ruff selection (metron:
# E, W, F, I, UP, B, C4) plus S (flake8-bandit) — config#2532 propagates the
# S ruleset as a SAST-lite layer for private repos where CodeQL isn't free.
select = ["E", "W", "F", "I", "UP", "B", "C4", "S"]
# E501: line length is a formatter concern, not correctness — deferred to ruff-format.
# S603 (subprocess-untrusted-input) is deliberately NOT ignored file-by-file — it is
# excluded from selection fleet-wide, following alpha-engine-config's precedent
# (config#2532, PR#2643). Verified empirically (ruff 0.14.14): S603 fires on ANY
# non-inline-literal subprocess argv, including a shutil.which()-resolved,
# None-checked absolute path assigned to a variable one line above the call (ruff has
# no data-flow analysis for this rule; see astral-sh/ruff#4045, upstream bandit B603
# docs: "even if you validate user input, this check will still report"). Selecting a
# rule that a fail-loud/no-noqa policy cannot satisfy by any code change would force a
# blanket suppression at every call site, which is worse than not selecting it. S607
# (partial-executable-path) IS selected and enforced for real — that is the rule that
# maps to an actual root-cause fix (resolve the binary to an absolute path via
# shutil.which() and fail loudly if missing), and every producer-path finding under it
# is fixed, not suppressed.
ignore = ["E501", "S603"]

[tool.ruff.lint.per-file-ignores]
# Test files: assert is the point (S101); dummy credential-shaped literals
# passed as fixture args (S106) or bound to names like GH_TOKEN/API_KEY
# (S105) are fixture noise, not real secrets; seeded random.Random(...)
# calls (S311) exercise deterministic-sampling code under test, never
# security-sensitive. Fail-loud rule (config#2532) is scoped to
# producer/writer paths — these are not those. E402 (import not at top):
# the fleet's established `pytest.importorskip("numpy")` / `pd =
# pytest.importorskip("pandas")` guard-then-import pattern (test.yml's own
# per-extra-skip convention — see that workflow's install-step comment) is
# an intentional module-level ordering, not an accidental one; the skip
# must run before the guarded import is attempted.
"tests/**" = ["S101", "S105", "S106", "S311", "E402"]
